--- a/customtabs/build.gradle
+++ b/customtabs/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'android-library'
 
 dependencies {
-    compile 'com.android.support:support-annotations:22.2.0+'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-annotations:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     sourceSets {
         main.manifest.srcFile 'AndroidManifest.xml'
